--- a/examples/Market_a_Jet_Backpack.ipynb
+++ b/examples/Market_a_Jet_Backpack.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/bjkemp/cookbook/blob/main/examples/Market_a_Jet_Backpack.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "C0h6YW7HqoWn"
       },
       "source": [
@@ -28,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "-herl-Ajxjnx",
         "colab": {
@@ -52,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "WBz0ZMzKyYFS"
       },
@@ -76,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "mIUxhHbFyZlf"
       },
@@ -102,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "APdYQyrMyax-"
       },
@@ -122,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "qXh6HRSS5eYt",
         "colab": {
@@ -148,7 +158,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "-HWBxh7Y6sRB",
         "colab": {
@@ -180,7 +190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "IlmZotnkyr7V"
       },
@@ -194,7 +204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "iFPuyJul7M-B"
       },
@@ -205,7 +215,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "O7kjcpjp7QCy",
         "colab": {
@@ -229,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "GioGOu5xspug",
         "colab": {
@@ -282,7 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "mwjIyGUfuyNh"
       },
@@ -293,7 +303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "a6JvXnQw-vWu"
       },
@@ -322,7 +332,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "qVdMCuT5C4Cr"
       },
@@ -333,7 +343,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "0etjpWkCC7YS"
       },
@@ -344,7 +354,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "IydpBhoiC-GB",
         "colab": {
@@ -389,7 +399,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "kI2UE3Q3DCy7"
       },
@@ -401,7 +411,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "rJFkfEGtE74Z"
       },
@@ -415,7 +425,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "eMok3SShpyD_"
       },
@@ -427,7 +437,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "ZJus2lB3vvU0",
         "colab": {
@@ -498,14 +508,15 @@
       "metadata": {
         "id": "VVPa35UvXqty"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "toc_visible": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
